--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
     <h1 id="title">Advinhe a Palavra</h1>
     <h3 id="dica"></h3>
     <p id="tentativas"></p>
-    <main class="container">
+    <main>
+    <section class="container">
     <div id="palavra">
 
     </div>
-    </main>
+</section>
+</main>
     <section>
         <form action="" id="form">
             <input type="text" name="" id="jogada">
         </form>
         
     </section>
+    
     <div id="letras-erradas">
 
     </div>
