alteração no score

--- a/score.html
+++ b/score.html
@@ -23,8 +23,18 @@
         div#informacoes {
             width: 300px;
             background-color: white;
-            padding: 5px;
+            padding: 15px;
             border-radius: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        div#informacoes > button {
+            padding: 5px;
+            cursor: pointer;
         }
 
         
